[package]
name = "mec11"
version = "0.1.0"
authors = ["Tapio Tallgren <tapio.tallgren@nokia.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.2"
actix-web = { version="^1.0.0", default-features = false }
actix-files = "0.1.1"
serde_urlencoded = "0.6.1"
futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"
rand = "0.7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
