[package]
name = "webserver-rocket-influxdb"
version = "0.1.0"
authors = ["Tapio Tallgren <tapio.tallgren@nokia.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
influx_db_client = "0.3.6"
json = "0.11.13"
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "serve"]
